src/objects/Expert_Role_by_Month_Data__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Experts__c</fullName>
        <label>Number of Experts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Snapshot_Name__c</fullName>
        <label>Reporting Snapshot Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Snapshot_Running_Id__c</fullName>
        <label>Reporting Snapshot Running Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Expert Role by Month Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Role__c</columns>
        <columns>Number_of_Experts__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERM-{0000}</displayFormat>
        <label>Expert Role by Month Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expert Role by Month Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>